Update generated files
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/deploy/crds/crd-certificates.yaml
+++ b/deploy/crds/crd-certificates.yaml
@@ -167,6 +167,21 @@ spec:
                 type: array
                 items:
                   type: string
+              privateKey:
+                description: Options to control private keys used for the Certificate.
+                type: object
+                properties:
+                  rotationPolicy:
+                    description: RotationPolicy controls how private keys should be
+                      regenerated when a re-issuance is being processed. If set to
+                      Never, a private key will only be generated if one does not
+                      already exist in the target `spec.secretName`. If one does exists
+                      but it does not have the correct algorithm or size, a warning
+                      will be raised to await user intervention. If set to Always,
+                      a private key matching the specified requirements will be generated
+                      whenever a re-issuance occurs. Default is 'Never' for backward
+                      compatibility.
+                    type: string
               renewBefore:
                 description: Certificate renew before expiration duration
                 type: string
@@ -428,6 +443,21 @@ spec:
                 type: integer
                 maximum: 8192
                 minimum: 0
+              privateKey:
+                description: Options to control private keys used for the Certificate.
+                type: object
+                properties:
+                  rotationPolicy:
+                    description: RotationPolicy controls how private keys should be
+                      regenerated when a re-issuance is being processed. If set to
+                      Never, a private key will only be generated if one does not
+                      already exist in the target `spec.secretName`. If one does exists
+                      but it does not have the correct algorithm or size, a warning
+                      will be raised to await user intervention. If set to Always,
+                      a private key matching the specified requirements will be generated
+                      whenever a re-issuance occurs. Default is 'Never' for backward
+                      compatibility.
+                    type: string
               renewBefore:
                 description: Certificate renew before expiration duration
                 type: string
