--- a/deploy/charts/cert-manager/templates/webhook-validating-webhook.yaml
+++ b/deploy/charts/cert-manager/templates/webhook-validating-webhook.yaml
@@ -29,6 +29,7 @@ webhooks:
           - "acme.cert-manager.io"
         apiVersions:
           - v1alpha2
+          - v1alpha3
         operations:
           - CREATE
           - UPDATE
@@ -48,4 +49,4 @@ webhooks:
       service:
         name: {{ template "webhook.fullname" . }}
         namespace: {{ .Release.Namespace | quote }}
-        path: /mutate
+        path: /validate
