--- a/cmd/ctl/pkg/renew/BUILD.bazel
+++ b/cmd/ctl/pkg/renew/BUILD.bazel
@@ -16,6 +16,8 @@ go_library(
         "@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library",
         "@io_k8s_client_go//kubernetes:go_default_library",
         "@io_k8s_kubectl//pkg/cmd/util:go_default_library",
+        "@io_k8s_kubectl//pkg/util/i18n:go_default_library",
+        "@io_k8s_kubectl//pkg/util/templates:go_default_library",
     ],
 )
 
