--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -11,6 +11,7 @@ filegroup(
         ":package-srcs",
         "//test/integration/certificates:all-srcs",
         "//test/integration/conversion:all-srcs",
+        "//test/integration/ctl:all-srcs",
         "//test/integration/framework:all-srcs",
         "//test/integration/webhook:all-srcs",
     ],
