--- a/pkg/controller/expcertificates/issuing/BUILD.bazel
+++ b/pkg/controller/expcertificates/issuing/BUILD.bazel
@@ -4,8 +4,7 @@ go_library(
     name = "go_default_library",
     srcs = [
         "issuing_controller.go",
-        "keystore.go",
-        "secret.go",
+        "temporary_certificate.go",
     ],
     importpath = "github.com/jetstack/cert-manager/pkg/controller/expcertificates/issuing",
     visibility = ["//visibility:public"],
@@ -19,12 +18,11 @@ go_library(
         "//pkg/controller:go_default_library",
         "//pkg/controller/expcertificates:go_default_library",
         "//pkg/controller/expcertificates/internal/predicate:go_default_library",
+        "//pkg/controller/expcertificates/internal/secretsmanager:go_default_library",
         "//pkg/logs:go_default_library",
         "//pkg/util/kube:go_default_library",
         "//pkg/util/pki:go_default_library",
         "@com_github_go_logr_logr//:go_default_library",
-        "@com_github_pavel_v_chernykh_keystore_go//:go_default_library",
-        "@com_sslmate_software_src_go_pkcs12//:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
@@ -55,28 +53,18 @@ filegroup(
 
 go_test(
     name = "go_default_test",
-    srcs = [
-        "issuing_controller_test.go",
-        "keystore_test.go",
-        "secret_test.go",
-        "util_test.go",
-    ],
+    srcs = ["issuing_controller_test.go"],
     embed = [":go_default_library"],
     deps = [
-        "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
-        "//pkg/controller:go_default_library",
+        "//pkg/controller/expcertificates/internal/test:go_default_library",
         "//pkg/controller/test:go_default_library",
-        "//pkg/util/pki:go_default_library",
         "//test/unit/gen:go_default_library",
-        "@com_github_pavel_v_chernykh_keystore_go//:go_default_library",
-        "@com_sslmate_software_src_go_pkcs12//:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_client_go//testing:go_default_library",
         "@io_k8s_client_go//tools/cache:go_default_library",
-        "@io_k8s_utils//clock/testing:go_default_library",
     ],
 )
