Adds doc generation for cobra controlled ctl comands
Signed-off-by: JoshVanL <vleeuwenjoshua@gmail.com>

--- a/cmd/controller/BUILD.bazel
+++ b/cmd/controller/BUILD.bazel
@@ -4,34 +4,13 @@ load("//build:go_binary.bzl", "go_binary")
 
 go_library(
     name = "go_default_library",
-    srcs = [
-        "main.go",
-        "start.go",
-    ],
+    srcs = ["main.go"],
     importpath = "github.com/jetstack/cert-manager/cmd/controller",
     visibility = ["//visibility:private"],
     deps = [
-        "//cmd/controller/app:go_default_library",
-        "//cmd/controller/app/options:go_default_library",
-        "//pkg/controller/acmechallenges:go_default_library",
-        "//pkg/controller/acmeorders:go_default_library",
-        "//pkg/controller/certificates:go_default_library",
-        "//pkg/controller/clusterissuers:go_default_library",
-        "//pkg/controller/expcertificates/trigger:go_default_library",
-        "//pkg/controller/ingress-shim:go_default_library",
-        "//pkg/controller/issuers:go_default_library",
-        "//pkg/issuer/acme:go_default_library",
-        "//pkg/issuer/ca:go_default_library",
-        "//pkg/issuer/selfsigned:go_default_library",
-        "//pkg/issuer/vault:go_default_library",
-        "//pkg/issuer/venafi:go_default_library",
+        "//cmd/controller/cmd:go_default_library",
         "//pkg/logs:go_default_library",
-        "//pkg/util:go_default_library",
         "//pkg/util/cmd:go_default_library",
-        "//pkg/util/feature:go_default_library",
-        "@com_github_spf13_cobra//:go_default_library",
-        "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
-        "@io_k8s_client_go//plugin/pkg/client/auth:go_default_library",
         "@io_k8s_klog//:go_default_library",
     ],
 )
@@ -55,6 +34,7 @@ filegroup(
     srcs = [
         ":package-srcs",
         "//cmd/controller/app:all-srcs",
+        "//cmd/controller/cmd:all-srcs",
     ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
