--- a/hack/BUILD.bazel
+++ b/hack/BUILD.bazel
@@ -276,6 +276,7 @@ filegroup(
         "//hack/bin:all-srcs",
         "//hack/boilerplate:all-srcs",
         "//hack/build:all-srcs",
+        "//hack/cobra:all-srcs",
         "//hack/filter-crd:all-srcs",
     ],
     tags = ["automanaged"],
