--- a/cmd/ctl/pkg/renew/BUILD.bazel
+++ b/cmd/ctl/pkg/renew/BUILD.bazel
@@ -15,7 +15,9 @@ go_library(
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library",
         "@io_k8s_client_go//kubernetes:go_default_library",
+        "@io_k8s_client_go//plugin/pkg/client/auth:go_default_library",
         "@io_k8s_client_go//rest:go_default_library",
+        "@io_k8s_klog//:go_default_library",
         "@io_k8s_kubectl//pkg/cmd/util:go_default_library",
         "@io_k8s_kubectl//pkg/util/i18n:go_default_library",
         "@io_k8s_kubectl//pkg/util/templates:go_default_library",
@@ -40,4 +42,5 @@ go_test(
     name = "go_default_test",
     srcs = ["renew_test.go"],
     embed = [":go_default_library"],
+    deps = ["@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library"],
 )
