internal/test.go accepts fixed clock and Shares generaleLocallySignedCertificate
Signed-off-by: JoshVanL <vleeuwenjoshua@gmail.com>

--- a/pkg/controller/expcertificates/internal/secretsmanager/BUILD.bazel
+++ b/pkg/controller/expcertificates/internal/secretsmanager/BUILD.bazel
@@ -12,7 +12,6 @@ go_library(
         "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
-        "//pkg/controller:go_default_library",
         "//pkg/util/pki:go_default_library",
         "@com_github_pavel_v_chernykh_keystore_go//:go_default_library",
         "@com_sslmate_software_src_go_pkcs12//:go_default_library",
@@ -45,6 +44,7 @@ go_test(
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_client_go//testing:go_default_library",
+        "@io_k8s_utils//clock/testing:go_default_library",
     ],
 )
 
