--- a/pkg/controller/expcertificates/internal/test/BUILD.bazel
+++ b/pkg/controller/expcertificates/internal/test/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
+        "//pkg/controller/expcertificates:go_default_library",
         "//pkg/util/pki:go_default_library",
         "//test/unit/gen:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
