--- a/pkg/controller/expcertificates/issuing/BUILD.bazel
+++ b/pkg/controller/expcertificates/issuing/BUILD.bazel
@@ -67,5 +67,6 @@ go_test(
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_client_go//testing:go_default_library",
         "@io_k8s_client_go//tools/cache:go_default_library",
+        "@io_k8s_utils//clock/testing:go_default_library",
     ],
 )
