Fix #2849 Add container security context to helm chart deployments Signed-off-by: Andrew Suderman <andrew@sudermanjr.com>

--- a/deploy/charts/cert-manager/templates/deployment.yaml
+++ b/deploy/charts/cert-manager/templates/deployment.yaml
@@ -105,6 +105,8 @@ spec:
           ports:
           - containerPort: 9402
             protocol: TCP
+          securityContext:
+            {{- toYaml .Values.containerSecurityContext | nindent 12 }}
           {{- if .Values.volumeMounts }}
           volumeMounts:
 {{ toYaml .Values.volumeMounts | indent 12 }}
