--- a/deploy/charts/cert-manager/templates/webhook-deployment.yaml
+++ b/deploy/charts/cert-manager/templates/webhook-deployment.yaml
@@ -79,6 +79,8 @@ spec:
               scheme: HTTP
             initialDelaySeconds: 5
             periodSeconds: 5
+          securityContext:
+            {{- toYaml .Values.webhook.containerSecurityContext | nindent 12 }}
           env:
           - name: POD_NAMESPACE
             valueFrom:
