--- a/cmd/ctl/BUILD.bazel
+++ b/cmd/ctl/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
 
 go_binary(
     name = "ctl",
+    out = "kubectl-cert_manager",
     embed = [":go_default_library"],
     pure = "on",
     visibility = ["//visibility:public"],
