Istio VirtualService for HTTP01 solving
Signed-off-by: Szabolcs Berecz <szabolcs.berecz@banzaicloud.com>

--- a/cmd/controller/app/BUILD.bazel
+++ b/cmd/controller/app/BUILD.bazel
@@ -38,6 +38,10 @@ go_library(
         "//pkg/util:go_default_library",
         "//pkg/util/feature:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
+        "@io_istio_client_go//pkg/apis/networking/v1alpha3:go_default_library",
+        "@io_istio_client_go//pkg/apis/networking/v1beta1:go_default_library",
+        "@io_istio_client_go//pkg/clientset/versioned:go_default_library",
+        "@io_istio_client_go//pkg/informers/externalversions:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/resource:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
