--- a/pkg/controller/BUILD.bazel
+++ b/pkg/controller/BUILD.bazel
@@ -13,6 +13,7 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/pkg/controller",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/acme/accounts:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/client/clientset/versioned:go_default_library",
         "//pkg/client/informers/externalversions:go_default_library",
