--- a/pkg/controller/acmeorders/BUILD.bazel
+++ b/pkg/controller/acmeorders/BUILD.bazel
@@ -12,6 +12,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/acme:go_default_library",
+        "//pkg/acme/accounts:go_default_library",
         "//pkg/acme/client:go_default_library",
         "//pkg/apis/acme/v1alpha2:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
@@ -65,8 +66,8 @@ go_test(
     ],
     embed = [":go_default_library"],
     deps = [
+        "//pkg/acme/accounts/test:go_default_library",
         "//pkg/acme/client:go_default_library",
-        "//pkg/acme/fake:go_default_library",
         "//pkg/apis/acme/v1alpha2:go_default_library",
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
