--- a/pkg/metrics/BUILD.bazel
+++ b/pkg/metrics/BUILD.bazel
@@ -8,17 +8,11 @@ go_library(
     deps = [
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
-        "//pkg/client/listers/certmanager/v1alpha2:go_default_library",
         "//pkg/logs:go_default_library",
-        "//pkg/util/errors:go_default_library",
-        "//pkg/util/kube:go_default_library",
+        "@com_github_go_logr_logr//:go_default_library",
         "@com_github_gorilla_mux//:go_default_library",
         "@com_github_prometheus_client_golang//prometheus:go_default_library",
         "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
-        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
-        "@io_k8s_apimachinery//pkg/labels:go_default_library",
-        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
-        "@io_k8s_client_go//listers/core/v1:go_default_library",
         "@io_k8s_client_go//tools/cache:go_default_library",
     ],
 )
@@ -44,6 +38,8 @@ go_test(
     deps = [
         "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
+        "//pkg/logs/testing:go_default_library",
+        "//test/unit/gen:go_default_library",
         "@com_github_prometheus_client_golang//prometheus/testutil:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
     ],
