Move non scripts from /hack into /tools
Signed-off-by: JoshVanL <vleeuwenjoshua@gmail.com>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -88,7 +88,7 @@ filegroup(
         "//test/integration:all-srcs",
         "//test/unit/gen:all-srcs",
         "//test/unit/listers:all-srcs",
-        "//tools/cobra:all-srcs",
+        "//tools:all-srcs",
     ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
