--- a/test/integration/framework/BUILD.bazel
+++ b/test/integration/framework/BUILD.bazel
@@ -9,9 +9,9 @@ go_library(
     ],
     data = [
         "//deploy/crds:crds.regular.yaml",
-        "//hack/bin:com_coreos_etcd",
-        "//hack/bin:io_kubernetes_kube-apiserver",
-        "//hack/bin:kubectl",
+        "//tools/bin:com_coreos_etcd",
+        "//tools/bin:io_kubernetes_kube-apiserver",
+        "//tools/bin:kubectl",
     ],
     importpath = "github.com/jetstack/cert-manager/test/integration/framework",
     visibility = ["//visibility:public"],
