--- a/pkg/acme/accounts/BUILD.bazel
+++ b/pkg/acme/accounts/BUILD.bazel
@@ -3,7 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "go_default_library",
     srcs = [
-        "factory.go",
+        "client.go",
         "registry.go",
     ],
     importpath = "github.com/jetstack/cert-manager/pkg/acme/accounts",
@@ -23,7 +23,6 @@ go_test(
     embed = [":go_default_library"],
     deps = [
         "//pkg/apis/acme/v1alpha2:go_default_library",
-        "//pkg/metrics:go_default_library",
         "//pkg/util/pki:go_default_library",
     ],
 )
