Ensures that integration tests use a free/or random port to start the metrics server. Tests that do not depend on metrics, do not actually start the server. Creates a shared test "FreePort" func. Fixes context placement.
Signed-off-by: JoshVanL <vleeuwenjoshua@gmail.com>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -87,6 +87,7 @@ filegroup(
         "//test/integration:all-srcs",
         "//test/unit/gen:all-srcs",
         "//test/unit/listers:all-srcs",
+        "//test/unit/net:all-srcs",
         "//tools/cobra:all-srcs",
     ],
     tags = ["automanaged"],
