--- a/test/e2e/framework/addon/vault/BUILD.bazel
+++ b/test/e2e/framework/addon/vault/BUILD.bazel
@@ -15,6 +15,7 @@ go_library(
         "//test/e2e/framework/addon/chart:go_default_library",
         "//test/e2e/framework/config:go_default_library",
         "//test/e2e/framework/log:go_default_library",
+        "//test/unit/net:go_default_library",
         "@com_github_hashicorp_vault_api//:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_api//rbac/v1:go_default_library",
